fix imgandtext alignment in mid container

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,8 @@ h1,p, h4,h6 {
 
 /* CSS for Mid Content */
 
+/* topContainer CSS */
+
 .topContainer {
   background-color: #301E67;
   display: flex;
@@ -68,6 +70,9 @@ h1,p, h4,h6 {
   width: 100%;
   height: 400px;
 }
+
+/*midContainer CSS */
+
 .midContainer {
   background-color: #5B8FB9;
   display: flex;
@@ -94,17 +99,28 @@ h1,p, h4,h6 {
   justify-content: space-around;
   gap: 48px;
 }
+.imgAndText {
+  font-weight: 600;
+  font-size: 16px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
 
-
+/* botContainerCSS*/
 
 .botContainer {
   background-color: black;
   display: flex;
+  flex: 1;
   align-items: center;
   justify-content: center;
   
 
 }
+
+/* CTA CSS */
 
 .CTA {
   background-color: #301E67;
